# podcast-categorizer

./: README.md  pyproject.toml  setup.cfg
podcast_categorizer/: _version.py  categorizer.py
podcast_categorizer/processors/spacy_processor/: processor.py
