[tool.poetry]
name = "podcast_categorizer"
version = "0.0.1"
description = "Library to categorize podcasts based on their description"
authors = ["Somesh Garje <someshgarje@gmail.com>"]
readme = "README.md"
packages = [
    { include = "podcast_categorizer" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
versioneer = "^0.29"
commitizen = "^3.29.1"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
black = "^24.10.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = [
    "pyproject.toml:^version",
    "podcast_categorizer/_version.py"
]
bump_message = "bump: version $current_version → $new_version [skip-ci]"

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "podcast_categorizer/_version.py"
tag_prefix = ""
parentdir_prefix = "podcast_categorizer-"